Fixed line spacing on article P tags

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -161,6 +161,8 @@ article img {
 
 article p {
   padding: 1rem;
+  font-size: 1rem;
+  line-height: 120%;
 }
 
 hr {
